feat: Mejoras en clonado de repositorios

--- a/.env.sample
+++ b/.env.sample
@@ -11,6 +11,7 @@ DRUPAL_TEMPLATE_DIR=''
 SCRIPT_TEMPLATE_DIR=''
 
 # Repositorios a los diferentes proyectos a usar como plantilla.
+# (Deberás tener acceso a estos repositorios para que funcionen.)
 MODULE_TEMPLATE_GIT='https://github.com/oscarnovasf/module_template.git'
 MODULE_TEMPLATE_BAS_GIT='https://github.com/oscarnovasf/module_template_bas.git'
 MODULE_TEMPLATE_IMPORT_GIT='https://github.com/oscarnovasf/module_template_import.git'
