--- a/.env.sample
+++ b/.env.sample
@@ -3,20 +3,22 @@
 DEFAULT_ORIGIN='git'
 
 # Paths a los diferentes proyectos a usar como plantilla.
+LANDO_TEMPLATE_DIR=''
 MODULE_TEMPLATE_DIR=''
+MODULE_TEMPLATE_API_DIR=''
 MODULE_TEMPLATE_BAS_DIR=''
 MODULE_TEMPLATE_IMPORT_DIR=''
-MODULE_TEMPLATE_API_REST_DIR=''
 DRUPAL_TEMPLATE_DIR=''
 SCRIPT_TEMPLATE_DIR=''
 
 # Repositorios a los diferentes proyectos a usar como plantilla.
 # (Deberás tener acceso a estos repositorios para que funcionen.)
+LANDO_TEMPLATE_GIT='https://github.com/oscarnovasf/lando-base-drupal.git'
 MODULE_TEMPLATE_GIT='https://github.com/oscarnovasf/module_template.git'
+MODULE_TEMPLATE_API_GIT=''
 MODULE_TEMPLATE_BAS_GIT='https://github.com/oscarnovasf/module_template_bas.git'
 MODULE_TEMPLATE_IMPORT_GIT='https://github.com/oscarnovasf/module_template_import.git'
-MODULE_TEMPLATE_API_REST_GIT=''
-DRUPAL_TEMPLATE_GIT='https://github.com/oscarnovasf/drupal-project.git'
+DRUPAL_TEMPLATE_GIT='https://github.com/oscarnovasf/drupal-base-project.git'
 SCRIPT_TEMPLATE_GIT='https://github.com/oscarnovasf/script_template.git'
 
 # Datos de acceso al repositorio de GitLab.com.
@@ -28,6 +30,7 @@ GITLAB_CUSTOM_API='https://<your_gitlab_domain>/api/v4/projects'
 GITLAB_CUSTOM_TOKEN='<gitlab_custom_token>'
 
 # Datos de acceso al repositorio de GitHub.
+# https://github.com/settings/tokens
 GITHUB_API='https://api.github.com'
 GITHUB_TOKEN='<github_token>'
 
@@ -36,14 +39,14 @@ GOGS_API='<your_gogs_domain>'
 GOGS_TOKEN='<gogs_token>'
 
 # Diferentes conexiones a los servidores.
-SERVER_1_USER='<server_1_user>'
-SERVER_1_PASS='<server_1_pass>'
-SERVER_1_IP='<server_1_ip>'
-
-SERVER_2_USER='<server_2_user>'
-SERVER_2_PASS='<server_2_pass>'
-SERVER_2_IP='<server_2_ip>'
+SERVER_USER='<server_user>'
+SERVER_PASS='<server_pass>'
+SERVER_IP='<server_ip>'
+SERVER_SSH='s|n'
+SERVER_BASE_ROUTE='<server_base_route>'
 
 PERSONAL_USER='<personal_user>'
 PERSONAL_PASS='<personal_pass>'
 PERSONAL_IP='<personal_ip>'
+PERSONAL_SSH='s|n'
+PERSONAL_BASE_ROUTE='<personal_base_route>'
