--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -214,6 +214,20 @@
     },
 
     {
+      "label": "hidden: Actualizar copilot-instructions.md",
+      "type": "shell",
+      "command": "curl https://raw.githubusercontent.com/oscarnovasf/VSCode-settings/master/.vscode/copilot-instructions.md -o .vscode/copilot-instructions.md",
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "group": "settings",
+        "close": true,
+        "clear": true
+      },
+      "icon": { "id": "settings-gear", "color": "terminal.ansiBlue"}
+    },
+
+    {
       "label": "- Actualizar configuraciones",
       "type": "shell",
       "isBackground": true,
@@ -225,9 +239,24 @@
         "hidden: Actualizar extensions.json",
         "hidden: Actualizar launch.json",
         "hidden: Actualizar settings.json",
-        "Actualizar tasks.json",
-        "hidden: Actualizar .editorconfig"
+        "hidden: Actualizar .editorconfig",
+        "hidden: Actualizar copilot-instructions.md",
+        "Actualizar tasks.json"
       ],
+      "icon": { "id": "settings-gear", "color": "terminal.ansiBlue"}
+    },
+
+    {
+      "label": "- Descargar sftp.json ",
+      "type": "shell",
+      "command": "curl https://raw.githubusercontent.com/oscarnovasf/VSCode-settings/master/.vscode/sftp.json -o .vscode/sftp.json",
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "group": "settings",
+        "close": true,
+        "clear": true
+      },
       "icon": { "id": "settings-gear", "color": "terminal.ansiBlue"}
     },
 
@@ -264,9 +293,9 @@
     },
 
     {
-      "label": "hidden: Actualizar phpdox.xml",
+      "label": "hidden: Actualizar phpstan.neon",
       "type": "shell",
-      "command": "curl https://raw.githubusercontent.com/oscarnovasf/VSCode-settings/master/phpdox.xml -o phpdox.xml && grep -l module_template phpdox.xml|xargs sed -i -e \"s/module_template/${workspaceFolderBasename}/g\"",
+      "command": "curl https://raw.githubusercontent.com/oscarnovasf/VSCode-settings/master/phpstan.neon -o phpstan.neon",
       "presentation": {
         "reveal": "always",
         "panel": "dedicated",
@@ -289,225 +318,17 @@
       },
       "dependsOn": [
         "hidden: Actualizar phpcs.xml",
-        "hidden: Actualizar phpdox.xml",
-        "hidden: Actualizar phpmd.xml"
+        "hidden: Actualizar phpmd.xml",
+        "hidden: Actualizar phpstan.neon"
       ],
       "icon": { "id": "files", "color": "terminal.ansiBlue"}
-    },
-
-    /* *************************************************************************
-     * TAREAS PARA ACTUALIZAR / DESCARGAR LIBRERÍAS.
-     **************************************************************************/
-
-    {
-      "label": "-- Element: MultiValue.php",
-      "type": "shell",
-      "command": "mkdir -p ${input:destino_element} && curl https://raw.githubusercontent.com/oscarnovasf/drupal-aux-libraries/master/src/Element/MultiValue.php -o ${input:destino_element}/MultiValue.php && grep -l module_template ${input:destino_element}/MultiValue.php|xargs sed -i -e \"s/module_template/${input:namespace}/g\"",
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "group": "librerias",
-        "close": true,
-        "clear": true
-      },
-      "icon": { "id": "cloud-download", "color": "terminal.ansiBlue"}
-    },
-
-    {
-      "label": "-- Librería: CalendarLinkFunctions.php",
-      "type": "shell",
-      "command": "mkdir -p ${input:destino} && curl https://raw.githubusercontent.com/oscarnovasf/drupal-aux-libraries/master/src/lib/general/CalendarLinkFunctions.php -o ${input:destino}/CalendarLinkFunctions.php && grep -l module_template ${input:destino}/CalendarLinkFunctions.php|xargs sed -i -e \"s/module_template/${input:namespace}/g\"",
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "group": "librerias",
-        "close": true,
-        "clear": true
-      },
-      "icon": { "id": "cloud-download", "color": "terminal.ansiBlue"}
-    },
-
-    {
-      "label": "-- Librería: DateTimeFunctions.php",
-      "type": "shell",
-      "command": "mkdir -p ${input:destino} && curl https://raw.githubusercontent.com/oscarnovasf/drupal-aux-libraries/master/src/lib/general/DateTimeFunctions.php -o ${input:destino}/DateTimeFunctions.php && grep -l module_template ${input:destino}/DateTimeFunctions.php|xargs sed -i -e \"s/module_template/${input:namespace}/g\"",
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "group": "librerias",
-        "close": true,
-        "clear": true
-      },
-      "icon": { "id": "cloud-download", "color": "terminal.ansiBlue"}
-    },
-
-    {
-      "label": "-- Librería: DrupalLog.php",
-      "type": "shell",
-      "command": "mkdir -p ${input:destino} && curl https://raw.githubusercontent.com/oscarnovasf/drupal-aux-libraries/master/src/lib/general/DrupalLog.php -o ${input:destino}/DrupalLog.php && grep -l module_template ${input:destino}/DrupalLog.php|xargs sed -i -e \"s/module_template/${input:namespace}/g\"",
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "group": "librerias",
-        "close": true,
-        "clear": true
-      },
-      "icon": { "id": "cloud-download", "color": "terminal.ansiBlue"}
-    },
-
-    {
-      "label": "-- Librería: FileFunctions.php",
-      "type": "shell",
-      "command": "mkdir -p ${input:destino} && curl https://raw.githubusercontent.com/oscarnovasf/drupal-aux-libraries/master/src/lib/general/FileFunctions.php -o ${input:destino}/FileFunctions.php && grep -l module_template ${input:destino}/FileFunctions.php|xargs sed -i -e \"s/module_template/${input:namespace}/g\"",
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "group": "librerias",
-        "close": true,
-        "clear": true
-      },
-      "icon": { "id": "cloud-download", "color": "terminal.ansiBlue"}
-    },
-
-    {
-      "label": "-- Librería: FtpFunctions.php",
-      "type": "shell",
-      "command": "mkdir -p ${input:destino} && curl https://raw.githubusercontent.com/oscarnovasf/drupal-aux-libraries/master/src/lib/general/FtpFunctions.php -o ${input:destino}/FtpFunctions.php && grep -l module_template ${input:destino}/FtpFunctions.php|xargs sed -i -e \"s/module_template/${input:namespace}/g\"",
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "group": "librerias",
-        "close": true,
-        "clear": true
-      },
-      "icon": { "id": "cloud-download", "color": "terminal.ansiBlue"}
-    },
-
-    {
-      "label": "-- Librería: Mailing.php",
-      "type": "shell",
-      "command": "mkdir -p ${input:destino_mailing} && curl https://raw.githubusercontent.com/oscarnovasf/drupal-aux-libraries/master/src/lib/Mailing.php -o ${input:destino_mailing}/Mailing.php && grep -l module_template ${input:destino_mailing}/Mailing.php|xargs sed -i -e \"s/module_template/${input:namespace}/g\"",
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "group": "librerias",
-        "close": true,
-        "clear": true
-      },
-      "dependsOn": [
-        "-- Librería: ResponseFunctions.php",
-      ],
-      "icon": { "id": "cloud-download", "color": "terminal.ansiBlue"}
-    },
-
-    {
-      "label": "-- Librería: MarkdownParser.php",
-      "type": "shell",
-      "command": "mkdir -p ${input:destino} && curl https://raw.githubusercontent.com/oscarnovasf/drupal-aux-libraries/master/src/lib/general/MarkdownParser.php -o ${input:destino}/MarkdownParser.php && grep -l module_template ${input:destino}/MarkdownParser.php|xargs sed -i -e \"s/module_template/${input:namespace}/g\"",
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "group": "librerias",
-        "close": true,
-        "clear": true
-      },
-      "icon": { "id": "cloud-download", "color": "terminal.ansiBlue"}
-    },
-
-    {
-      "label": "-- Librería: ParamsFunctions.php",
-      "type": "shell",
-      "command": "mkdir -p ${input:destino} && curl https://raw.githubusercontent.com/oscarnovasf/drupal-aux-libraries/master/src/lib/general/ParamsFunctions.php -o ${input:destino}/ParamsFunctions.php && grep -l module_template ${input:destino}/ParamsFunctions.php|xargs sed -i -e \"s/module_template/${input:namespace}/g\"",
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "group": "librerias",
-        "close": true,
-        "clear": true
-      },
-      "icon": { "id": "cloud-download", "color": "terminal.ansiBlue"}
-    },
-
-    {
-      "label": "-- Librería: ResponseFunctions.php",
-      "type": "shell",
-      "command": "mkdir -p ${input:destino} && curl https://raw.githubusercontent.com/oscarnovasf/drupal-aux-libraries/master/src/lib/general/ResponseFunctions.php -o ${input:destino}/ResponseFunctions.php && grep -l module_template ${input:destino}/ResponseFunctions.php|xargs sed -i -e \"s/module_template/${input:namespace}/g\"",
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "group": "librerias",
-        "close": true,
-        "clear": true
-      },
-      "icon": { "id": "cloud-download", "color": "terminal.ansiBlue"}
-    },
-
-    {
-      "label": "-- Librería: StringFunctions.php",
-      "type": "shell",
-      "command": "mkdir -p ${input:destino} && curl https://raw.githubusercontent.com/oscarnovasf/drupal-aux-libraries/master/src/lib/general/StringFunctions.php -o ${input:destino}/StringFunctions.php && grep -l module_template ${input:destino}/StringFunctions.php|xargs sed -i -e \"s/module_template/${input:namespace}/g\"",
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "group": "librerias",
-        "close": true,
-        "clear": true
-      },
-      "icon": { "id": "cloud-download", "color": "terminal.ansiBlue"}
-    },
-
-    {
-      "label": "-- Librería: ValidateFunctions.php",
-      "type": "shell",
-      "command": "mkdir -p ${input:destino} && curl https://raw.githubusercontent.com/oscarnovasf/drupal-aux-libraries/master/src/lib/general/ValidateFunctions.php -o ${input:destino}/ValidateFunctions.php && grep -l module_template ${input:destino}/ValidateFunctions.php|xargs sed -i -e \"s/module_template/${input:namespace}/g\"",
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "group": "librerias",
-        "close": true,
-        "clear": true
-      },
-      "icon": { "id": "cloud-download", "color": "terminal.ansiBlue"}
-    },
-
-    /* *************************************************************************
-     * TAREAS PARA CORREGIR FALLOS EN MAC.
-     **************************************************************************/
-
-    {
-      "label": "Reparar archivos duplicados *.*.e",
-      "type": "shell",
-      "command": "find ./ -name '*.*-e' -type f -delete",
-      "presentation": {
-        "reveal": "silent",
-        "group": "utils",
-        "clear": true,
-        "close": true,
-      },
-      "icon": { "id": "settings-gear", "color": "terminal.ansiBlue"}
-    },
-
-    /* *************************************************************************
-     * TAREAS EN DESUSO PERO QUE PUEDEN SER NECESARIAS.
-     **************************************************************************/
-
-    {
-      "label": "hidden: Actualizar .gitignore",
-      "type": "shell",
-      "command": "curl https://raw.githubusercontent.com/oscarnovasf/VSCode-settings/master/.gitignore_tasks -o .gitignore",
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "group": "documentacion",
-        "close": true,
-        "clear": true
-      },
     },
 
   ],
 
   /* ***************************************************************************
    * VARIABLES USADAS EN LAS TAREAS ANTERIORES.
+   * Ej. de uso => "mkdir -p ${input:destino}"
    ****************************************************************************/
   "inputs": [
     {
@@ -515,18 +336,6 @@
       "description": "Destino:",
       "type": "promptString",
       "default": "src/lib/general"
-    },
-    {
-      "id": "destino_element",
-      "description": "Destino (Element):",
-      "type": "promptString",
-      "default": "src/Element"
-    },
-    {
-      "id": "destino_mailing",
-      "description": "Destino (Mailing):",
-      "type": "promptString",
-      "default": "src/lib"
     },
     {
       "id": "namespace",
